Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-html {
-  overflow-x: hidden;
+html,
+body {
+  width: auto !important;
+  overflow-x: hidden !important;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
 body {
@@ -9,7 +13,6 @@ body {
   background-repeat: no-repeat;
   background-position: 0 5rem;
   background-color: #f7f7f9;
-  overflow-x: hidden;
 }
 
 .main_heading {
@@ -274,10 +277,7 @@ nav {
 .grid-container {
   display: grid;
   grid-gap: 45px;
-  padding: 40px;
-  padding-right: 30px;
-  margin-left: 4%;
-  padding-left: 5px;
+  margin-top: 25%;
 }
 
 .grid-container > div > div > h1 {
@@ -340,6 +340,8 @@ nav {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 30px;
   border-radius: 15px;
+  margin-left: 6%;
+  margin-right: 6%;
   border: 1px solid lightgray;
 }
 
@@ -492,9 +494,10 @@ nav {
 
 @media only screen and (min-device-width: 992px) {
   body {
-    background: white url('./images/Header_bg_desktop.svg') 100% 70%;
+    background: white url('./images/Header_bg_desktop.svg');
     background-repeat: no-repeat;
-    background-position: 0 5rem;
+    background-position: center 5rem;
+    background-size: 95%;
     overflow-x: hidden;
   }
 
@@ -618,13 +621,15 @@ nav {
   }
 
   .grid-container {
-    margin-top: 20%;
+    margin-top: 15%;
     background: #e5e5e5;
   }
 
   .grid-item {
     display: flex;
-    width: 1000px;
+    width: 1100px;
+    margin-left: unset;
+    margin-top: 8%;
   }
 
   .js_flex > img,
